scrollbar issue fix

--- a/src/components/DescriptiveInsights/HcpAce/components/MainContent/MainContent.css
+++ b/src/components/DescriptiveInsights/HcpAce/components/MainContent/MainContent.css
@@ -417,7 +417,7 @@
   /* gap: 28px;
 
   padding: 0; */
-  padding: 32px;
+  padding: 0px 32px 32px 32px;
   margin-top: 44px;
 
   border: 1px solid #cacbce;
