--- a/src/components/DescriptiveInsights/HcpAce/components/Sidebar/Sidebar.css
+++ b/src/components/DescriptiveInsights/HcpAce/components/Sidebar/Sidebar.css
@@ -1,6 +1,7 @@
 .sidebar {
   width: 100%;
-  height: 1042px;
+  /* height: 1042px; */
+  max-height: 98%;
   background: #fff;
   border-right: 1px solid #e0e0e0;
   transition: width 0.3s ease;
